[package]
name = "dmtr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
inquire = "0.6.2"
json = "0.12.4"
miette = { version = "5.10.0", features = ["fancy"] }
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
rustls = "0.21.7"
rustls-native-certs = "0.6.3"
serde_json = "1.0.106"
socket2 = "0.5.4"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tokio-rustls = "0.24.1"
tracing = "0.1.37"
tracing-indicatif = "0.3.5"
tracing-subscriber = "0.3.17"
