[package]
name = "dmtrctl"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
clap = { version = "4.4.2", features = ["derive", "env"] }
colored = "2.1.0"
comfy-table = "7.1.1"
dirs = "5.0.1"
indexmap = { version = "2.2.6", features = ["serde"] }
inquire = "0.6.2"
json = "0.12.4"
miette = { version = "5.10.0", features = ["fancy"] }
ocipkg = "0.2.8"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
rustls = "0.21.7"
rustls-native-certs = "0.6.3"
semver = "1.0.22"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
socket2 = "0.5.4"
spinners = "4.1.1"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tokio-rustls = "0.24.1"
toml = "0.8.1"
tracing = "0.1.37"
tracing-indicatif = "0.3.5"
tracing-subscriber = "0.3.17"
