[package]
name = "dmtrctl"
version = "2.0.0"
edition = "2021"
repository = "https://github.com/demeter-run/cli"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmtri = { version = "0.1.0", git = "https://github.com/demeter-run/specs.git" }
# dmtri = { version = "0.1.0", path = "../specs/gen/rust" }

base64 = "0.22.0"
clap = { version = "4.4.2", features = ["derive", "env"] }
colored = "2.1.0"
comfy-table = "7.1.1"
dirs = "5.0.1"
indexmap = { version = "2.2.6", features = ["serde"] }
inquire = "0.6.2"
json = "0.12.4"
miette = { version = "5.10.0", features = ["fancy"] }
tonic = { version = "0.11.0", features = ["transport", "tls", "tls-roots"]}
ocipkg = "0.2.8"
reqwest = { version = "0.11.20", features = ["blocking", "json", "rustls-tls-webpki-roots"] }
rustls-native-certs = "0.7"
semver = "1.0.22"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
socket2 = "0.5.4"
spinoff = "0.8.0"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tokio-rustls = "0.25"
toml = "0.8.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
k8s-openapi = { version = "0.22.0", features = ["latest"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "demeter-run/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "skip"
# Whether to install an updater program
install-updater = false
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.79.0"

[workspace.metadata.release]
push = false
publish = false
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]

[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-14"
aarch64-unknown-linux-gnu = "buildjet-2vcpu-ubuntu-2204-arm"
